--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
     <!-- Fonts -->
     <link rel="stylesheet" href="./assets/font/stylesheet.css" />
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
