--- a/sign-up.html
+++ b/sign-up.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grocery Mart</title>
+    <title>Sign up | Grocery Mart</title>
     <!-- Favicon -->
     <link
       rel="apple-touch-icon"
@@ -36,14 +36,13 @@
     <script src="./assets/js/script.js"></script>
   </head>
   <body>
-    <!-- Header -->
     <header id="header"></header>
     <script>
       load("#header", "./template/header.html");
     </script>
 
-    <h1>long</h1>
-    <!-- Footer -->
+    <h1>sign up</h1>
+
     <footer id="footer"></footer>
     <script>
       load("#footer", "./template/footer.html");
