--- a/index.html
+++ b/index.html
@@ -36,17 +36,19 @@
     <script src="./assets/js/script.js"></script>
   </head>
   <body>
-    <!-- Header -->
-    <header id="header"></header>
-    <script>
-      load("#header", "./template/header.html");
-    </script>
+    <div class="container">
+      <!-- Header -->
+      <header id="header"></header>
+      <script>
+        load("#header", "./template/header.html");
+      </script>
 
-    <h1>long</h1>
-    <!-- Footer -->
-    <footer id="footer"></footer>
-    <script>
-      load("#footer", "./template/footer.html");
-    </script>
+      <h1>long</h1>
+      <!-- Footer -->
+      <footer id="footer"></footer>
+      <script>
+        load("#footer", "./template/footer.html");
+      </script>
+    </div>
   </body>
 </html>
