--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,13 +36,12 @@
     <script src="./assets/js/script.js"></script>
   </head>
   <body>
+    <!-- Header -->
+    <header id="header" class="header"></header>
+    <script>
+      load("#header", "./template/header.html");
+    </script>
     <div class="container">
-      <!-- Header -->
-      <header id="header"></header>
-      <script>
-        load("#header", "./template/header.html");
-      </script>
-
       <h1>long</h1>
       <!-- Footer -->
       <footer id="footer"></footer>
